--- a/app/templates/pages/corpus.html
+++ b/app/templates/pages/corpus.html
@@ -9,7 +9,7 @@
         </div>
             <div>
                 <h2 class="h2_global">Principes d'encodage et règles de présentation</h2>
-            <p>L'encodage s'est fait à partir de transcriptions normalisées saisies dans un document <code>.doc</code> où les abréviations et leurs résolutions n'étaient pas signalées. Il suit, avec quelques adaptations, les préconisations du <a href="http://developpements.enc.sorbonne.fr/diple/schema/">projet &#171; dipl &#187; de l'École nationale des chartes</a>.</p>
+            <p>L'encodage a été réalisé à partir de transcriptions normalisées saisies dans un document <code>.doc</code> où les abréviations et leurs résolutions n'étaient pas signalées. Il suit, avec quelques adaptations, les préconisations du <a href="http://developpements.enc.sorbonne.fr/diple/schema/" target="_blank">projet &#171; dipl &#187; de l'École nationale des chartes</a>.</p>
             <div>
                 <details>
                     <summary>Cliquer pour afficher le shéma XML suivi.</summary>
@@ -51,7 +51,7 @@
             </div>
             <p style="text-align: justify;">La chancellerie du duc de Bourbon utilisait le style de Pâques. Les textes édités suivent le style du 1<sup>er</sup> janvier. Tout changement est signalé par la mention <i>(n. st.)</i> (nouveau style).</p>
             <p style="text-align: justify;">Lorsque l'acte est analysé dans un inventaire, cette analyse a été reprise, modifiée et développée. Les analyses des actes issus de la série P des Archives nationales sont reprises de l'ouvrage <i>Titres de l’ancienne maison ducale de Bourbon</i>, édité par Alphonse Huillard-Bréholles et Albert Lecoy de La Marche (Paris, 1867-1874), qui se trouve ici abrégé en <i>Titres de Bourbon</i>.</p>
-            <p style="text-align: justify;">Les actes sont présentés selon une mise en page diplomatique, où se succèdent le numéro de l'acte, sa datation, son analyse, un tableau de sa tradition, l'acte lui-même et ses éventuelles notes. Les images de plusieurs actes originaux et de deux <i>deperdita</i> sont également disponibles. À l'exception de celle de l'<a href="{{url_for('acte', acte_id=9)}}">acte n° 9</a>, il ne s'agit pas de prises de vue professionnelles.</p>
+            <p style="text-align: justify;">Les actes sont présentés selon une mise en page diplomatique, où se succèdent le numéro de l'acte, sa datation, son analyse, un tableau de sa tradition, l'acte lui-même et ses éventuelles notes. Les images de plusieurs actes originaux et de deux <i>deperdita</i> sont également disponibles. À l'exception de celle de l'<a href="{{url_for('acte', acte_id=9)}}" target="_blank">acte n° 9</a>, il ne s'agit pas de prises de vue professionnelles.</p>
             </div>
         <div>
         </div>
