ajout target='_blank'

--- a/app/templates/pages/bibliographie.html
+++ b/app/templates/pages/bibliographie.html
@@ -21,11 +21,11 @@
 					<p>Valentine Martin, <i>La chancellerie bourbonnaise à la fin du XIII<sup>e</sup> siècle et sous les principats de Louis I<sup>er</sup> et Pierre I<sup>er</sup> de Bourbon (ca. 1270-1356), suivi d’un recueil des actes de la chancellerie</i>, mémoire de Master recherche sous la direction d'Olivier Mattéoni, École d'histoire de la Sorbonne (Paris I), 2019.</p>
 					<p>Jean-Damien Généro, <i>La chancellerie de Charles I<sup>er</sup> de Bourbon (1425-1456), avec l'édition de ses actes et de ceux de son épouse, Agnès de Bourgogne</i>, mémoire de Master recherche sous la direction d'Olivier Mattéoni, École d'histoire de la Sorbonne (Paris I), 2018.</p>
 					<h3 class="h3_global">Articles scientifiques</h3>
-					<p>Olivier&nbsp;Mattéoni, « Écrire et signer à la chancellerie d'un contemporain de Jean de Berry, Louis II de Bourbon (1356-1410) », dans <i>Jean de Berry et l'écrit. Les pratiques documentaires d'un fils de roi de France</i>, Olivier&nbsp;Guyotjeannin, Olivier&nbsp;Mattéoni (dir.), Paris, École nationale des chartes et Éditions de la Sorbonne, 2019, p.&nbsp;159-185 <a href="https://books.openedition.org/psorbonne/54218">[lire en ligne]</a>.</p>
+					<p>Olivier&nbsp;Mattéoni, « Écrire et signer à la chancellerie d'un contemporain de Jean de Berry, Louis II de Bourbon (1356-1410) », dans <i>Jean de Berry et l'écrit. Les pratiques documentaires d'un fils de roi de France</i>, Olivier&nbsp;Guyotjeannin, Olivier&nbsp;Mattéoni (dir.), Paris, École nationale des chartes et Éditions de la Sorbonne, 2019, p.&nbsp;159-185 <a href="https://books.openedition.org/psorbonne/54218" target="_blank">[lire en ligne]</a>.</p>
 					<p>Jean-Damien&nbsp;Généro et Olivier&nbsp;Mattéoni, « Les  actes  d’Anne  Dauphine :  étude  diplomatique », dans <i>Anne  Dauphine,  dernière  comtesse  de  Forez</i>, O.  Mattéoni  (dir.), Montbrison  La  Diana, Société historique et archéologique du Forez, 2019, p.&nbsp;35-52.</p>
 					<p>Olivier Mattéoni, « Écriture  et pouvoir  princier.  La  chancellerie  du  duc  Louis  II  de  Bourbon  (1356-1410) »,  dans  Guido&nbsp;Castelnuovo  et  Olivier&nbsp;Mattéoni  (dir.), <i>« De  part  et  d’autre  des  Alpes » (II).  Chancelleries et chanceliers des princes à la fin du Moyen Âge</i>, Chambéry, 2011, p.&nbsp;137-178.</p>
 					<h3 class="h3_global">Inventaire</h3>
-					<p><i>Titres de l’ancienne maison ducale de Bourbon</i>, 2 vol., Alphonse Huillard-Bréholles, Albert Lecoy de La Marche (éd.), Paris, 1867-1874 <a href="https://archive.org/details/bub_gb_POUbAQAAMAAJ">[lire en ligne]</a> (abrégé en <i>Titres de Bourbon</i>).</p>	
+					<p><i>Titres de l’ancienne maison ducale de Bourbon</i>, 2 vol., Alphonse Huillard-Bréholles, Albert Lecoy de La Marche (éd.), Paris, 1867-1874 <a href="https://archive.org/details/bub_gb_POUbAQAAMAAJ" target="_blank">[lire en ligne]</a> (abrégé en <i>Titres de Bourbon</i>).</p>	
 				</div>
 			</div>
 		</div>
@@ -35,8 +35,8 @@
 			</div>
 			<div class="projet-text" id="biblio">
 				<h3 class="h3_global">Actes de Jean de Berry</h3>
-				<p><i>Jean de Berry et l'écrit. Les pratiques documentaires d'un fils de roi de France</i>, sous la direction d'Olivier&nbsp;Guyotjeannin et d'Olivier&nbsp;Mattéoni, Paris, École nationale des chartes et Éditions de la Sorbonne, 2019 <a href="https://books.openedition.org/psorbonne/54103">[lire en ligne]</a>.</p>
-				<p><a href="http://www.archives18.fr/article.php?larub=604">Les actes de Jean de Berry dans le fonds de la Sainte-Chapelle de Bourges, sur le site des Archives départementales du Cher.</a></p>
+				<p><i>Jean de Berry et l'écrit. Les pratiques documentaires d'un fils de roi de France</i>, sous la direction d'Olivier&nbsp;Guyotjeannin et d'Olivier&nbsp;Mattéoni, Paris, École nationale des chartes et Éditions de la Sorbonne, 2019 <a href="https://books.openedition.org/psorbonne/54103" target="_blank">[lire en ligne]</a>.</p>
+				<p><a href="http://www.archives18.fr/article.php?larub=604" target="_blank">Les actes de Jean de Berry dans le fonds de la Sainte-Chapelle de Bourges, sur le site des Archives départementales du Cher.</a></p>
 			</div>
 			<div class="projet-text" id="biblio">
 				<h3 class="h3_global">Actes des ducs de Bourgogne</h3>
