--- a/app/templates/pages/index_prosopo.html
+++ b/app/templates/pages/index_prosopo.html
@@ -5,6 +5,9 @@
 		<h1 class="h1_global">Index prosopographique</h1>
 		<p class="index-rules">L'index présente les individus cités selon un modèle prosopographique. Une attention particulière est portée aux hommes du duc de Bourbon, pour lesquels il est indiqué leur appartenance aux différentes structures administratives et domestiques. Le duc Charles I<sup>er</sup> est exclu de l'index.</p>
 	</div>
+	<div>
+		<p style="text-align: justify;">Accès rapide : <a href="#rois">rois</a> &mdash; <a href="#h_roi_Fr">hommes du roi de France</a> &mdash; <a href="#bourbon">famille ducale de Bourbon</a> &mdash; <a href="#h_bourbon">hommes du duc de Bourbon</a> <i>(<a href="#hotel">hôtel ducal</a> &bull; <a href="#chancellerie">chancellerie</a> &bull; <a href="#chbre_moulins">Chambre des comptes de Moulins</a> &bull; <a href="#off_bourbonnais">officiers du duché de Bourbonnais</a> &bull; <a href="#off_auvergne">du duché d'Auvergne</a> &bull; <a href="#off_forez">du comté de Forez</a> &bull; <a href="#off_beaujolais">de la seigneurie de Beaujeu</a>)</i> &mdash; <a href="#princes">princes</a> &mdash; <a href="#h_bourgogne">hommes du duc de Bourgogne</a> &mdash; <a href="#h_savoie">hommes du duc de Savoie</a>.</p>
+	</div>
 	{{contenu_index_prosopo|safe}}
 </div>
 {% endblock %}
