--- a/app/templates/pages/corpus.html
+++ b/app/templates/pages/corpus.html
@@ -49,8 +49,8 @@
 </pre>
                 </details>
             </div>
-            <p style="text-align: justify;">La chancellerie du duc de Bourbon utilisait le style de Pâques. Les textes édités suivent le style du 1<sup>er</sup> janvier. Tout changement est signalé par la mention <i>(n. st.)</i> (nouveau style).</p>
-            <p style="text-align: justify;">Lorsque l'acte est analysé dans un inventaire, cette analyse a été reprise, modifiée et développée. Les analyses des actes issus de la série P des Archives nationales sont reprises de l'ouvrage <i>Titres de l’ancienne maison ducale de Bourbon</i>, édité par Alphonse Huillard-Bréholles et Albert Lecoy de La Marche (Paris, 1867-1874), qui se trouve ici abrégé en <i>Titres de Bourbon</i>.</p>
+            <p style="text-align: justify;">La chancellerie du duc de Bourbon utilisait le style de Pâques. Les textes édités suivent le style du 1<sup>er</sup> janvier ; les changements induits par cela sont signalés par la mention <i>(n. st.)</i> (nouveau style).</p>
+            <p style="text-align: justify;">Lorsque l'acte est analysé dans un inventaire, cette analyse a été reprise, modifiée et développée. Les analyses des actes issus de la série P des Archives nationales sont reprises de l'ouvrage <i>Titres de l’ancienne maison ducale de Bourbon</i>, édité par Alphonse Huillard-Bréholles et Albert Lecoy de La Marche (Paris, 1867-1874), qui se trouve ici abrégé en <i>Titres de Bourbon</i> <a href="https://archive.org/details/bub_gb_POUbAQAAMAAJ" target="_blank">[lire en ligne]</a>.</p>
             <p style="text-align: justify;">Les actes sont présentés selon une mise en page diplomatique, où se succèdent le numéro de l'acte, sa datation, son analyse, un tableau de sa tradition, l'acte lui-même et ses éventuelles notes. Les images de plusieurs actes originaux et de deux <i>deperdita</i> sont également disponibles. À l'exception de celle de l'<a href="{{url_for('acte', acte_id=9)}}" target="_blank">acte n° 9</a>, il ne s'agit pas de prises de vue professionnelles.</p>
             </div>
         <div>
