corrections et ajouts

--- a/app/templates/pages/duc.html
+++ b/app/templates/pages/duc.html
@@ -12,7 +12,7 @@
 		<figure class="projet-img-global">
 			<img src="{{url_for('static', filename='img/armorial_revel_369.jpeg')}}" alt="Armorial de Guillaume Revel, folio 33" class="img-global"/>
 			<figcaption class="projet-img-legend">
-				<p class="caption-main"><a href="https://gallica.bnf.fr/ark:/12148/btv1b8470455b/f379.image" target="_blank">Représentation de la ville de Moulins, capitale de Charles I<sup>er</sup> et d'Agnès de Bourgogne, dans l'armorial de Guillaume Revel (BnF, ms. fr. 22297, f. 369, XV<sup>e</sup> siècle)</a>.</p>
+				<p class="caption-main"><a href="https://gallica.bnf.fr/ark:/12148/btv1b8470455b/f379.image" target="_blank">Représentation de la ville de Moulins, capitale de Charles&nbsp;I<sup>er</sup> et d'Agnès de Bourgogne, dans l'armorial de Guillaume Revel (BnF, ms. fr. 22297, f. 369, XV<sup>e</sup> siècle)</a>.</p>
 			</figcaption>
 		</figure>
     </div>
