--- a/app/templates/conteneur.html
+++ b/app/templates/conteneur.html
@@ -39,14 +39,14 @@
                 <form class="nav-form" action="{{url_for('contact')}}" method="get">
                     <button class="nav-dropbtn">Contact</button>
                 </form>
-                <!--<form class="nav-form" action="{{url_for('resultats')}}" method="GET">
+                <form class="nav-form" action="{{url_for('resultats')}}" method="GET">
                     <div class="form-home">
                         <input name="keyword" type="search" placeholder="Rechercher dans les actes" aria-label="Recherche" id="nav-searchbar">
                         <div>
                             <button type="submit">Rechercher</button>
                         </div>
                     </div>
-                </form>-->
+                </form>
             </div>
         </nav>
         <header class="header-global">
