--- a/app/templates/pages/mentionslegales.html
+++ b/app/templates/pages/mentionslegales.html
@@ -24,7 +24,7 @@
 		<p>La photographie de l'<a href="{{url_for('acte', acte_id=9)}}">acte 9</a> a été réalisée par Gilles Bernasconi des Archives municipales de Lyon. Tous droits réservés.</p>
 		<p>La photographie de l'<a href="{{url_for('acte', acte_id=17)}}">acte 17</a> a été réalisée par les Archives municipales de Villefranche-sur-Saône.</p>
 		<p>La photographie présentée sur la page <a href="{{url_for('projet')}}">À propos</a> a été réalisée par les Archives départementales du Nord. Tous droits réservés.</p>
-		<p>Les icônes LinkedIn, GitHub et Academia présentées dans le footer proviennent de Flaticon (<a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>)</p>
+		<p>Les icônes LinkedIn, GitHub et Academia présentées dans le footer proviennent de Flaticon (<a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>).</p>
 		<p>Les crédits photographiques et autres mentions relatives aux droits d’auteur, tels que spécifiés sur ce site, doivent être respectés.</p>
 	</div>
 	<div class="mentions-div">
